# spatialfusion

./: LICENSE  README.md  pyproject.toml
data/checkpoint_dir_ae/: spatialfusion-multimodal-ae.pt
data/checkpoint_dir_gcn/: spatialfusion-full-gcn.pt  spatialfusion-he-gcn.pt
src/spatialfusion/embed/: embed.py
src/spatialfusion/finetune/: finetune.py
src/spatialfusion/models/: baseline_multi_ae.py  gcn.py  multi_ae.py
src/spatialfusion/utils/: ae_data_loader.py  baseline_ae_data_loader.py  embed_ae_utils.py  embed_gcn_utils.py  gcn_utils.py  pkg_ckpt.py
tests/: test_basic.py  test_finetune.py  test_imports.py
